# ic-wasm

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  action.yaml  dist-workspace.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: publish.yml  release-npm.yml  release.yml  rust.yml  wasm.yml
ic-wasm/: Cargo.toml
icx-wasm/: Cargo.toml
npm/: .gitignore  .npmignore  Dockerfile.test  README.md  docker-compose.test.yml
npm/ic-wasm/: README.md  index.js  package.json  postinstall.js
npm/ic-wasm-darwin-arm64/: package.json
npm/ic-wasm-darwin-x64/: package.json
npm/ic-wasm-linux-arm64/: package.json
npm/ic-wasm-linux-x64/: index.js  package.json
npm/ic-wasm-win32-x64/: package.json
npm/scripts/: download-binaries.sh  publish-all.sh  test-docker.sh  update-package-json.sh  verify-binaries.sh
src/: info.rs  instrumentation.rs  lib.rs  limit_resource.rs  metadata.rs  optimize.rs  shrink.rs  utils.rs
src/check_endpoints/: mod.rs
src/check_endpoints/candid/: mod.rs
tests/: README.md  a.sh  classes.wasm  deployable.ic-repl.sh  evm.mo  evm.wasm  greet.wasm  motoko-region.wasm  motoko.wasm  rust-region.wasm  rust.wasm  tests.rs  valid.did  wasi-test.wasm  wasi-test.wat  wat.wasm
tests/ok/: classes-limit.wasm  classes-nop-redirect.wasm  classes-optimize-level-4.wasm  classes-optimize-level-z.wasm  classes-optimize-names.wasm  classes-optimize.wasm  classes-redirect.wasm  classes-shrink-names.wasm  classes-shrink.wasm  evm-redirect.wasm  greet_instrument.wasm  motoko-gc-instrument.wasm  motoko-instrument.wasm  motoko-limit.wasm  motoko-optimize-level-4.wasm  motoko-optimize-level-z.wasm  motoko-optimize-names.wasm  motoko-optimize.wasm  motoko-region-instrument.wasm  motoko-shrink-names.wasm  motoko-shrink.wasm  rust-instrument.wasm  rust-limit.wasm  rust-optimize-level-4.wasm  rust-optimize-level-z.wasm  rust-optimize-names.wasm  rust-optimize.wasm  rust-region-instrument.wasm  rust-shrink.wasm  wat-instrument.wasm  wat-limit.wasm  wat-optimize-level-z.wasm  wat-optimize-names.wasm  wat-shrink.wasm
