[package]
name = "ic-wasm"
version = "0.6.1"
authors = ["DFINITY Stiftung"]
edition = "2021"
description = "A library for performing Wasm transformations specific to canisters running on the Internet Computer"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ic-wasm"
repository = "https://github.com/dfinity/ic-wasm"
categories = ["wasm"]
keywords = ["internet-computer", "canister", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[[bin]]
name = "ic-wasm"
path = "src/bin/main.rs"
required-features = ["exe"]

[dependencies]
walrus = "0.20.1"
candid = "0.9.9"
rustc-demangle = "0.1"
thiserror = "1.0.35"

wasm-opt = { version = "0.113.0", optional = true }
tempfile = { version = "3.5.0", optional = true }
anyhow = { version = "1.0.34", optional = true }
clap = { version = "4.1", features = ["derive", "cargo"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["anyhow", "clap", "wasm-opt"]
exe = ["anyhow", "clap", "serde"]
wasm-opt = ["dep:wasm-opt", "tempfile"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
assert_cmd = "2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz" # archive-suffix = .tar.gz
