[package]
name = "ic-wasm"
version = "0.9.5"
authors = ["DFINITY Stiftung"]
edition = "2021"
description = "A library for performing Wasm transformations specific to canisters running on the Internet Computer"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ic-wasm"
repository = "https://github.com/dfinity/ic-wasm"
categories = ["wasm"]
keywords = ["internet-computer", "canister", "dfinity"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"                                                                          # archive-suffix = .tar.gz

[[bin]]
name = "ic-wasm"
path = "src/bin/main.rs"
required-features = ["exe"]

[features]
check-endpoints = ["dep:anyhow", "dep:candid_parser", "dep:parse-display"]
default = ["check-endpoints", "exe", "wasm-opt"]
exe = ["dep:anyhow", "dep:clap", "dep:serde"]
wasm-opt = ["dep:wasm-opt", "dep:tempfile"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = { version = "1.0.34", optional = true }
candid = "0.10"
candid_parser = { version = "0.2.1", optional = true }
clap = { version = "4.1", features = ["derive", "cargo"], optional = true }
libflate = "2.0"
parse-display = { version = "0.10.0", optional = true }
rustc-demangle = "0.1"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tempfile = { version = "3.5.0", optional = true }
thiserror = "1.0.35"
# Major version bump of walrus should result in a major version bump of ic-wasm.
# Because we expose walrus types in ic-wasm public API.
walrus = "0.22.0"
wasm-opt = { version = "0.116.0", optional = true }
wasmparser = "0.223.0"

[dev-dependencies]
assert_cmd = "2"
